# vault

./: .gitignore  README.md  agent.md  changelog.md  docker-compose.yml
backend/: .env.example  Dockerfile  requirements.txt  watcher_entrypoint.py  worker.py
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/models/: document.py
backend/app/routes/: documents.py
backend/app/schemas/: document.py
backend/app/services/: minio_client.py  ocr.py  search_client.py  watcher.py
backend/app/workers/: celery_app.py  tasks.py
docs/: architecture.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: status-badge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx  tabs.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: dashboard.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
